# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pre-commit.hooks.yaml  LICENSE  README.md  pyproject.toml
pre_commit_hooks/: check_necessary_files.py  check_packit_file.py  source0_uses_version_macro.py
