[tool.poetry]
name = "pre_commit_hooks"
version = "1.0.0"
description = "Set of pre-commit hooks for Alpa repository"
authors = ["Jiri Kyjovsky <j1.kyjovsky@gmail.com>"]
maintainers = ["Jiří Kyjovský <j1.kyjovsky@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alpa-team/pre-commit-hooks"
repository = "https://github.com/alpa-team/pre-commit-hooks"
exclude = ["test/"]


[tool.poetry.dependencies]
python = "^3.9"
packitos = ">=0.65"
specfile = ">=0.13"
alpa_conf = ">=0.4.0"
pyalpa = ">=0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
check-packit-file = "pre_commit_hooks.check_packit_file:main"
check-necessary-files = "pre_commit_hooks.check_necessary_files:main"
source0-uses-version-macro = "pre_commit_hooks.source0_uses_version_macro:main"
